Agregando boton ACH Panama

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -102,7 +102,7 @@
   "withdrawCrypto": "Withdraw Crypto",
   "done": "Done",
   "internationalWire": "International Wire",
-  "domesticWire": "Domestic Wire",
+  "domesticWire": "US Domestic Wire",
   "betweenNOBACrypto": "Between NOBA Crypto Wallets",
   "otherPlatformCrypto": "To other Platforms Crypto Wallets",
   "betweenNOBA": "Transfer Between NOBA Accounts",
