--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -102,7 +102,7 @@
   "withdrawCrypto": "Retiros Cripto",
   "done": "Hecho",
   "internationalWire": "Banco International",
-  "domesticWire": "Banco Domestico",
+  "domesticWire": "US Banco Domestico",
   "betweenNOBACrypto": "Entre billeteras criptográficas NOBA",
   "otherPlatformCrypto": "A otras plataformas Crypto Wallets",
   "betweenNOBA": "Transferencia entre cuentas NOBA",
