--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -448,5 +448,5 @@
   "typeFileNotSelected": "Debe seleccionar el tipo de documento.",
   "beneficiaryPending": "Los datos del beneficiario estan siendo valdiados, le enviaremos un correo electronico tan pronto sea aprobado",
   "beneficiaryRejected": "El beneficiario fue rechazado, no sera posible hacer transacciones con el.",
-  "validDocument": "¿Posee un Documento de identificación válido en EEUU?"
+  "validDocument": "¿Posee un Documento de identificación válido en EE.UU?"
 }
