--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -455,5 +455,7 @@
   "fileSizeError": "The file is larger than 5Mb.",
   "typeFileNotSelected": "You must select the document type.",
   "beneficiaryPending": "The user is being validated, we will let you know when is available.",
-  "beneficiaryRejected": "The beneficiary has being rejected, is not available."
+  "beneficiaryRejected": "The beneficiary has being rejected, is not available.",
+  "textValidateDocument": "File type not supported",
+  "typeDocumentAdmitted": "Supported Documents, JPG, JPEG, PNG or PDF"
 }
