--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -449,5 +449,7 @@
   "beneficiaryPending": "Los datos del beneficiario estan siendo valdiados, le enviaremos un correo electronico tan pronto sea aprobado",
   "beneficiaryRejected": "El beneficiario fue rechazado, no sera posible hacer transacciones con el.",
   "typeProduct": "Tipo de producto",
-  "depositAccountPanama": "Los depósitos en esta cuenta deben ser realizados en Dólares Panama"
+  "depositAccountPanama": "Los depósitos en esta cuenta deben ser realizados en Dólares Panama",
+  "conceptLabel": "Concepto",
+  "bankNameLabel": "Nombre del banco"
 }
