--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -103,11 +103,11 @@
   "done": "Hecho",
   "internationalWire": "Banco International",
   "domesticWire": "Banco Domestico",
-  "betweenNOBACrypto": "Entre billeteras criptográficas NOBA",
+  "betweenNOBACrypto": "Entre billeteras criptográficas Belobaba",
   "otherPlatformCrypto": "A otras plataformas Crypto Wallets",
-  "betweenNOBA": "Transferencia entre cuentas NOBA",
+  "betweenNOBA": "Transferencia entre cuentas Belobaba",
   "withdrawFiatSelectMsg": "Seleccione transferencia nacional (dentro de los EE. UU.) o internacional (bancos internacionales)",
-  "withdrawCryptoSelectMsg": "Seleccione Crypto Transfer Interno (dentro de Noba) o Externo (Fuera de Noba)",
+  "withdrawCryptoSelectMsg": "Seleccione Crypto Transfer Interno (dentro de Belobaba) o Externo (Fuera de Belobaba)",
   "depositAccountUSD": "Los depósitos en esta cuenta deben ser realizados en Dólares Americanos",
   "depositAccountOther": "Los depósitos en esta cuenta podrán ser realizados desde otras monedas diferentes al dólar americano.",
   "depositNameOnBank": "Nombre en la cuenta bancaria",
@@ -123,7 +123,7 @@
   "statePlaceHolder": "Seleccionar estado",
   "cityPlaceHolder": "Seleccionar ciudad",
   "youBeneficiaries": "Tus beneficiarios",
-  "nobaBeneficiaryEmail": "Correo electrónico del beneficiario de Noba",
+  "nobaBeneficiaryEmail": "Correo electrónico del beneficiario de Belobaba",
   "fullName": "Nombre completo",
   "somethingWentWrong": "Algo salio mal",
   "updatePasswordSuccessMessage": "Contrasena actualizada con exito",
@@ -210,11 +210,11 @@
   "textCopySuccessful": "Copiado al portapapeles con éxito",
   "titleDespositFiat": "Instrucciones de depósito",
   "downloadPdf": "Descargar archivo PDF",
-  "footerPdfFiatData": "Noba.cash TM 2023 - Todos los derechos reservados.",
+  "footerPdfFiatData": "Belobaba TM 2023 - Todos los derechos reservados.",
   "namePdfDepositFiatDomestic": "Instrucciones de depósito doméstico",
   "namePdfDepositFiatInternational": "Instrucciones de depósito internacional",
   "depositBankName": "Nombre del banco a depositar",
-  "textNewWalletAddress": "En Noba solo se puede tener una billetera por activo asociado.",
+  "textNewWalletAddress": "En Belobaba solo se puede tener una billetera por activo asociado.",
   "transactionHistory": "Histórico de transacciones",
   "extractGenerated": "Extracto Generado",
   "extracts": "Extractos",
@@ -284,19 +284,19 @@
   "yes": "Si",
   "no": "No",
   "recommendationSaveCodeRecovery": "Para activar el doble factor de autenticacion, por favor confirme que ha guardado los codigos de recuperacion.",
-  "twoFactorMessage": "La autenticación de dos factores (2FA) ahora está habilitada para su cuenta noba.cash",
+  "twoFactorMessage": "La autenticación de dos factores (2FA) ahora está habilitada para su cuenta Belobaba",
   "twoFactorSecondMessage": "Has activado el doble factor de autenticación. Ahora utilizaras el código de tu aplicación de administración de contraseñas, en los siguientes momentos:",
-  "twoFactorActionOne": "Ingresar en tu cuenta noba.cash",
-  "twoFactorActionTwo": "Confirmar retiros desde tu cuenta noba.cash",
+  "twoFactorActionOne": "Ingresar en tu cuenta Belobaba",
+  "twoFactorActionTwo": "Confirmar retiros desde tu cuenta Belobaba",
   "validVerifyCode": "código de verificación no puede estar vacío",
   "passwordHelpText": "Introduce tu clave de acceso",
   "verifyCode": "Verificar el código",
   "enterCode": "Introduce el código de verificación",
   "verificationToken": "Verificando el token de solicitud de recuperación de la autenticación de doble factor",
   "verificationTokenForRecoveryTwoFactorSuccess": "La solicitud fue procesada con exito",
-  "verificationTokenForRecoveryTwoFactorSuccessMessage": "Ahora podras ingresar a tu cuenta noba.cash. Una vez que ingreses sigue los siguentes pasos:",
+  "verificationTokenForRecoveryTwoFactorSuccessMessage": "Ahora podras ingresar a tu cuenta Belobaba. Una vez que ingreses sigue los siguentes pasos:",
   "verificationTokenForRecoveryTwoFactorStep1": "Has click en el boton de login",
-  "verificationTokenForRecoveryTwoFactorStep2": "Ingresa a tu cuenta noba.cash.",
+  "verificationTokenForRecoveryTwoFactorStep2": "Ingresa a tu cuenta Belobaba.",
   "verificationTokenForRecoveryTwoFactorStep3": "Abre a tu perfil, en el apartado configuración.",
   "verificationTokenForRecoveryTwoFactorStep4": "Realiza el proceso de activación de la autenticación de dos factores.",
   "verificationTokenForRecoveryTwoFactorFail": "La verificación de la solicitud de recuperación de la autenticación de dos factores fallo.",
@@ -380,7 +380,7 @@
   "namePdfTransactionHistory": "historico-transacciones",
   "uploadDocumentsTitle": "Subir documentos",
   "subtitleUploadDocuments": "Puedes elegir entre 2 tipos de cuenta",
-  "onboardingTitle": "Crea una cuenta Noba, ¡es gratis!",
+  "onboardingTitle": "Crea una cuenta Belobaba, ¡es gratis!",
   "personalAccount": "Cuenta personal",
   "businessAccount": "Cuenta de negocios",
   "titleNaturalPerson": "Personal",
@@ -423,11 +423,11 @@
   "accountPropuseHelpText": "Escriba brevemente el uso que va a realizar de la cuenta. Ejemplo: Facturación de ventas, pago de nómina, pago a proveedores, pago de servicios.",
   "editNewShareHolder": "Editar accionista",
   "sourceAssetsAndIncomeLabel": "Fuente de activos e ingresos",
-  "sourceAssetsAndIncomeHelpText": "Describa brevemente su actividad comercial y el origen de los fondos que se transarían a través de su cuenta o wallet de NOBA.",
+  "sourceAssetsAndIncomeHelpText": "Describa brevemente su actividad comercial y el origen de los fondos que se transarían a través de su cuenta o wallet de Belobaba.",
   "intendedUseAccountLabel": "Cuenta de uso previsto",
   "intendedUseAccountHelpText": "Describa el uso para el que destinará la cuenta. Ejemplo: swap de cripto a fiat. Cuenta custodia de facturación. Cuenta para transacciones dentro de USA.",
   "anticipatedTypesAssetsLabel": "Tipos anticipados de activos",
-  "anticipatedTypesAssetsHelpText": "Coloque los activos que espera adquirir o vender en su wallet NOBA. Ejemplo: Bitcoin, Ethereum, Cardano, etc.",
+  "anticipatedTypesAssetsHelpText": "Coloque los activos que espera adquirir o vender en su wallet Belobaba. Ejemplo: Bitcoin, Ethereum, Cardano, etc.",
   "anticipatedMonthlyCashVolumeLabel": "Volumen de efectivo mensual anticipado",
   "anticipatedMonthlyCashVolumeHelpText": "Coloque un monto promedio que espera tener en cuenta y mover mensualmente. Ejemplo: $5,000-$10,000; $10,000-$20,000; $20,000-$50,000; $50,000-$200,000; $200,000-$500,000; $500,000-$5,000,000; Por encima de $5,000,000.",
   "anticipatedTradingPatternsLabel": "Patrones comerciales anticipados",
