fix: variables y format file.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -221,8 +221,8 @@
   "titleDespositFiat": "Deposit Instructions",
   "downloadPdf": "Download PDF File",
   "footerPdfFiatData": "Noba.cash TM 2023 - All rights reserved.",
-  "namePdfDepositFiatDomestic": "Domestic Deposit Instructions",
-  "namePdfDepositFiatInternational": "International Deposit Instructions",
+  "namePdfDepositFiatDomestic": "ABA Fedwire Deposit Instructions",
+  "namePdfDepositFiatInternational": "SWIFT Deposit Instructions",
   "transactionHistory": "Transaction history",
   "extractGenerated": "Generated Extract",
   "extracts": "Extracts",
