--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -211,8 +211,8 @@
   "titleDespositFiat": "Instrucciones de depósito",
   "downloadPdf": "Descargar archivo PDF",
   "footerPdfFiatData": "Noba.cash TM 2023 - Todos los derechos reservados.",
-  "namePdfDepositFiatDomestic": "Instrucciones de depósito doméstico",
-  "namePdfDepositFiatInternational": "Instrucciones de depósito internacional",
+  "namePdfDepositFiatDomestic": "Instrucciones de depósito doméstico ABA Fedwire",
+  "namePdfDepositFiatInternational": "Instrucciones de depósito SWIFT",
   "depositBankName": "Nombre del banco a depositar",
   "textNewWalletAddress": "En Noba solo se puede tener una billetera por activo asociado.",
   "transactionHistory": "Histórico de transacciones",
