Dni y validacion del Radio Button

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -142,7 +142,7 @@
   "newBeneficiary": "New Beneficiary",
   "beneficiaryAddress": "Beneficiary Address",
   "docTypeLabelDriversLicense": "Driver License",
-  "docTypeLabelGovernmentId": "GovernmentId",
+  "docTypeLabelGovernmentId": "Identity Card",
   "docTypeLabelPassport": "Passport",
   "docTypeLabelResidencePermit": "Residence Permit",
   "youSendTo": "You send to ",
