--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -140,7 +140,7 @@
   "newBeneficiary": "Nuevo Beneficiario",
   "beneficiaryAddress": "Dirección del beneficiario",
   "docTypeLabelDriversLicense": "Licencia de conducir",
-  "docTypeLabelGovernmentId": "Tarjeta de identificación",
+  "docTypeLabelGovernmentId": "Documento de identificación",
   "docTypeLabelPassport": "Pasaporte",
   "docTypeLabelResidencePermit": "Permiso de residencia",
   "youSendTo": "Enviaras para ",
