--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -23,7 +23,7 @@
   "fiat": "Fiat",
   "crypto": "Cripto",
   "cryptoWallet": "Billetera Cripto",
-  "selectCrypto": "Seleccione una cripto",
+  "selectCrypto": "Seleccione una Asset",
   "search": "Buscar",
   "createWallet": "Crear billetera",
   "searchWallet": "Buscar billetera cripto",
