--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -140,7 +140,7 @@
   "newBeneficiary": "Nuevo Beneficiario",
   "beneficiaryAddress": "Dirección del beneficiario",
   "docTypeLabelDriversLicense": "Licencia de conducir",
-  "docTypeLabelGovernmentId": "Identificación del Gobierno",
+  "docTypeLabelGovernmentId": "Documento de identificación",
   "docTypeLabelPassport": "Pasaporte",
   "docTypeLabelResidencePermit": "Permiso de residencia",
   "youSendTo": "Enviaras para ",
@@ -449,5 +449,6 @@
   "beneficiaryPending": "Los datos del beneficiario estan siendo valdiados, le enviaremos un correo electronico tan pronto sea aprobado",
   "beneficiaryRejected": "El beneficiario fue rechazado, no sera posible hacer transacciones con el.",
   "textValidateDocument": "Tipo de Archivo no soportado",
-  "typeDocumentAdmitted": "Documentos Admitidos, JPG, JPEG, PNG o PDF"
+  "typeDocumentAdmitted": "Documentos Admitidos, JPG, JPEG, PNG o PDF",
+  "validDocument": "¿Posee un Documento de identificación válido en EE.UU?"
 }
