--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -457,5 +457,6 @@
   "beneficiaryPending": "The user is being validated, we will let you know when is available.",
   "beneficiaryRejected": "The beneficiary has being rejected, is not available.",
   "textValidateDocument": "File type not supported",
-  "typeDocumentAdmitted": "Supported Documents, JPG, JPEG, PNG or PDF"
+  "typeDocumentAdmitted": "Supported Documents, JPG, JPEG, PNG or PDF",
+  "validDocument": "Do you have a valid identification document in the US?"
 }
