--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -58,7 +58,7 @@
   "postalCodeLabel": "Código postal",
   "documentAlreadyVerified": "Tus documentos ya fueron verificados",
   "documentAlreadyReject": "Tus documentos fueron rechazados",
-  "employmentInformation":"Información laboral",
+  "employmentInformation": "Información laboral",
   "documents": "Documentos",
   "businessTitle": "EMPRESA - CARGA DE DOCUMENTOS",
   "businessDocumentLabel": "Documentos constitutivo de la empresa",
@@ -206,13 +206,13 @@
   "documentProofOfAddress5": "Copia del Título de Propiedad Inmobiliaria",
   "documentProofOfAddress6": " Factura del Impuesto sobre la Propiedad",
   "documentProofOfAddress7": "W2 u otro documento de declaración de impuestos",
-  "employmentStatus":"Estado laboral",
+  "employmentStatus": "Estado laboral",
   "employmentStatusEmployed": "Empleado",
   "employmentStatusSelfEmployed": "Trabajador por cuenta propia",
   "employmentStatusUnemployed": "Desempleado",
   "employmentStatusRetired": "Jubilado",
   "occupationLabel": "Ocupación",
-  "helpTextOccupation":"Escriba su ocupación",
+  "helpTextOccupation": "Escriba su ocupación",
   "naturalAccountTittle": "Información personal",
   "historicTransactionsTitle": "Histórico de transacciones",
   "loadMore": "Carga más",
@@ -281,7 +281,7 @@
   "opportunityWithActiveAccount": "Oportunindades con cuenta activa",
   "affiliateLink": "Tu link de afiliado",
   "twoFactor": "Autenticación en dos (2) pasos",
-  "enableTwoFactor": "Habilia la autenticación en dos (2) pasos (2FA)",
+  "enableTwoFactor": "Habilita la autenticación en dos (2) pasos (2FA)",
   "authenticatorApp": "Setup authenticator app",
   "downloadYourRecoveryCodes": "Descarga tus códigos de recuperación",
   "textDownloadRecoveryCodes": "Puede usar códigos de recuperación como un segundo factor de autenticación en caso de que pierda el acceso a su dispositivo. nosotros recomendamos guardarlos en un administrador de contraseñas seguro como 1Password, Authy o Keeper",
@@ -507,8 +507,8 @@
   "marijuana": "Marihuana",
   "tumbling": "Tumbling",
   "helpTextEngageInActivities": "Seleccione la actividad en la que participa.",
-  "helpTextEmploymentStatus":"Seleccione su estado laboral.",
-  "helpTextSelectAOption":"Seleccione una opción",
+  "helpTextEmploymentStatus": "Seleccione su estado laboral.",
+  "helpTextSelectAOption": "Seleccione una opción",
   "validDocument": "¿Posee un Documento de identificación válido en EE.UU?",
   "profileKyc": "Perfil KYC"
 }
