fix: ajustes generales de paises permitidos por el proveedor de USA

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -375,6 +375,7 @@
   "other": "Other",
   "institution": "INSTITUTION",
   "institutionAddress": "Institution address",
+  "institutionName": "Institution name",
   "beneficiaryCountry": "Country of residence of the beneficiary",
   "unknown": "UNKNOWN",
   "ex_spouse": "EX_SPOUSE",
