--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -111,9 +111,9 @@
   "domesticWire": "US Wire",
   "betweenNOBACrypto": "Between BELOBABA Crypto Wallets",
   "otherPlatformCrypto": "To other Platforms Crypto Wallets",
-  "betweenNOBA": "Transfer Between NOBA Accounts",
+  "betweenNOBA": "Transfer Between BELOBABA Accounts",
   "withdrawFiatSelectMsg": "Select domestic wire (within the USA) or international (international banks)",
-  "withdrawCryptoSelectMsg": "Select Crypto Transfer Internal (within Noba) or External (Outside Noba)",
+  "withdrawCryptoSelectMsg": "Select Crypto Transfer Internal (within BELOBABA) or External (Outside BELOBABA)",
   "depositAccountUSD": "Deposits in this account must be made in US Dollars",
   "depositAccountOther": "Deposits into this account can be made in currencies other than US dollars.",
   "depositNameOnBank": "Name on Bank Account",
@@ -231,7 +231,7 @@
   "depositBankName": "Depository Bank Name",
   "titleDespositFiat": "Deposit Instructions",
   "downloadPdf": "Download PDF File",
-  "footerPdfFiatData": "Noba.cash TM 2023 - All rights reserved.",
+  "footerPdfFiatData": "BELOBABA TM 2024 - All rights reserved.",
   "namePdfDepositFiatDomestic": "ABA Fedwire Deposit Instructions",
   "namePdfDepositFiatInternational": "SWIFT Deposit Instructions",
   "transactionHistory": "Transaction history",
@@ -248,7 +248,7 @@
   "depositTransactionName": "Deposit",
   "withdrawTransactionName": "Withdraw",
   "selectAnAsset": "Select an asset",
-  "textNewWalletAddress": "In Noba you can only have one wallet per associated asset.",
+  "textNewWalletAddress": "In BELOBABA you can only have one wallet per associated asset.",
   "warningProofOfAddress": "If you are an American citizen, and the uploaded document has the address you registered for the signing process, please press continue to finish.",
   "proofOfAddress1": "If the address in your ID does not match the address you registered for the signing process, please upload proof of address USA territories.",
   "proofOfAddress2": "If you are a foreign citizen and used your Passport for the signing process, please upload proof of address in USA territories.",
@@ -303,19 +303,19 @@
   "yes": "Yes",
   "no": "No",
   "recommendationSaveCodeRecovery": "To activate two-factor authentication, please confirm that you have saved the recovery codes.",
-  "twoFactorMessage": "Two-factor authentication (2FA) is now enabled for your account noba.cash",
+  "twoFactorMessage": "Two-factor authentication (2FA) is now enabled for your account BELOBABA",
   "twoFactorSecondMessage": "You have activated the double authentication factor. We now use the code from your password manager application, at the following times:",
-  "twoFactorActionOne": "Login in noba.cash",
-  "twoFactorActionTwo": "Confirm withdrawals from your noba.cash account",
+  "twoFactorActionOne": "Login in BELOBABA",
+  "twoFactorActionTwo": "Confirm withdrawals from your BELOBABA account",
   "validVerifyCode": "verification code cannot be empty",
   "passwordHelpText": "Enter your password",
   "verifyCode": "Check code",
   "enterCode": "Enter verification code",
   "verificationToken": "Performing Two-Factor Authentication Retrieval Request Token Verification",
   "verificationTokenForRecoveryTwoFactorSuccess": "The request has been processed successfully",
-  "verificationTokenForRecoveryTwoFactorSuccessMessage": "Now you can access your account at noba.cash. Once you log in, follow the following steps:",
+  "verificationTokenForRecoveryTwoFactorSuccessMessage": "Now you can access your account at BELOBABA. Once you log in, follow the following steps:",
   "verificationTokenForRecoveryTwoFactorStep1": "Click on the login button",
-  "verificationTokenForRecoveryTwoFactorStep2": "Access your noba.cash account.",
+  "verificationTokenForRecoveryTwoFactorStep2": "Access your BELOBABA account.",
   "verificationTokenForRecoveryTwoFactorStep3": "Go to your profile, in the configuration section.",
   "verificationTokenForRecoveryTwoFactorStep4": "Complete the two-factor authentication activation process.",
   "verificationTokenForRecoveryTwoFactorFail": "The verification of the two-factor authentication recovery request failed.",
@@ -443,7 +443,7 @@
   "associationsAccountsLabel": "Associations with other accounts",
   "editNewShareHolder": "Edit shareholder",
   "sourceAssetsAndIncomeLabel": "Source of assets and income",
-  "sourceAssetsAndIncomeHelpText": "Briefly describe your commercial activity and the origin of the funds that would be transacted through your NOBA account or wallet.",
+  "sourceAssetsAndIncomeHelpText": "Briefly describe your commercial activity and the origin of the funds that would be transacted through your BELOBABA account or wallet.",
   "intendedUseAccountLabel": "Intended use account",
   "intendedUseAccountHelpText": "Describe the use for which the account will be put. Example: swap from crypto to fiat. Custody billing account. Account for transactions within the USA.",
   "anticipatedTypesAssetsLabel": "Advance types of assets",
