--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -106,9 +106,9 @@
   "domesticWire": "US Domestico",
   "betweenNOBACrypto": "Entre billeteras criptográficas BELOBABA",
   "otherPlatformCrypto": "A otras plataformas Crypto Wallets",
-  "betweenNOBA": "Transferencia entre cuentas NOBA",
+  "betweenNOBA": "Transferencia entre cuentas BELOBABA",
   "withdrawFiatSelectMsg": "Seleccione transferencia nacional (dentro de los EE. UU.) o internacional (bancos internacionales)",
-  "withdrawCryptoSelectMsg": "Seleccione Crypto Transfer Interno (dentro de Noba) o Externo (Fuera de Noba)",
+  "withdrawCryptoSelectMsg": "Seleccione Crypto Transfer Interno (dentro de BELOBABA) o Externo (Fuera de BELOBABA)",
   "depositAccountUSD": "Los depósitos en esta cuenta deben ser realizados en Dólares Americanos",
   "depositAccountOther": "Los depósitos en esta cuenta podrán ser realizados desde otras monedas diferentes al dólar americano.",
   "depositNameOnBank": "Nombre en la cuenta bancaria",
@@ -293,7 +293,7 @@
   "yes": "Si",
   "no": "No",
   "recommendationSaveCodeRecovery": "Para activar el doble factor de autenticacion, por favor confirme que ha guardado los codigos de recuperacion.",
-  "twoFactorMessage": "La autenticación de dos factores (2FA) ahora está habilitada para su cuenta noba.cash",
+  "twoFactorMessage": "La autenticación de dos factores (2FA) ahora está habilitada para su cuenta BELOBABA",
   "twoFactorSecondMessage": "Has activado el doble factor de autenticación. Ahora utilizaras el código de tu aplicación de administración de contraseñas, en los siguientes momentos:",
   "twoFactorActionOne": "Ingresar en tu cuenta BELOBABA",
   "twoFactorActionTwo": "Confirmar retiros desde tu cuenta BELOBABA",
