refactor - add validation so that only images are allowed on ID documens

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -525,5 +525,6 @@
   "helpTextSelectAOption": "Select an option",
   "validDocument": "Do you have a valid identification document in the US?",
   "profileKyc": "Profile KYC",
-  "transactionConfirmation": "Confirm transaction"
+  "transactionConfirmation": "Confirm transaction",
+  "typeImageAdmitted": "Supported Documents, JPG, JPEG, PNG"
 }
