--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -511,5 +511,6 @@
   "helpTextSelectAOption": "Seleccione una opción",
   "validDocument": "¿Posee un Documento de identificación válido en EE.UU?",
   "profileKyc": "Perfil KYC",
-  "transactionConfirmation": "Confirma la transaccion"
+  "transactionConfirmation": "Confirma la transaccion",
+  "typeImageAdmitted": "Documentos Admitidos, JPG, JPEG, PNG"
 }
