--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -117,6 +117,7 @@
   "routingNumber": "Número de ruta",
   "creditTo": "Crédito a",
   "address": "Dirección",
+  "addressBeneficiary": "Dirección del beneficiario",
   "accountNumber": "Número de cuenta",
   "bankAddress": "Dirección del banco",
   "bankPhone": "Teléfono del banco",
