refactor: add format prettier and companyType options

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -528,5 +528,6 @@
   "profileKyc": "Profile KYC",
   "transactionConfirmation": "Confirm transaction",
   "typeImageAdmitted": "Supported Documents, JPG, JPEG, PNG",
-  "companyType":"Company type"
+  "companyType": "Company type",
+  "soleProp": "Sole proprietorship"
 }
