--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -532,5 +532,24 @@
   "soleProp": "Sole proprietorship",
   "twoFactorAlertTitle": "Activate two-factor authentication",
   "twoFactorAlertMessage": "For security, you need to activate two-factor authentication to confirm withdrawals in your BELOBABA account.",
-  "btnActivateTwoFactorAuth" : "Activate two factor"
+  "btnActivateTwoFactorAuth" : "Activate two factor",
+  "SELF": "Self",
+  "FRIEND": "Friend",
+  "CUSTOMER": "Customer",
+  "EMPLOYEE": "Employee",
+  "BRANCH_OFFICE": "Branch Office",
+  "SUBSIDIARY_COMPANY": "Subsidiary Company",
+  "HOLDING_COMPANY": "Holding Company",
+  "SUPPLIER": "Supplier",
+  "CREDITOR": "Creditor",
+  "DEBTOR": "Debtor",
+  "FRANCHISEE": "Franchisee",
+  "NOT_RELATED": "Not Related",
+  "EX_SPOUSE": "Ex Spouse",
+  "CHILDREN": "Children",
+  "PARENT": "Parent",
+  "SIBLING": "Sibling",
+  "RELATIVE": "Relative",
+  "BUSINESS_PARTNER": "Business Partner",
+  "SPOUSE": "Spouse"
 }
