--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -518,5 +518,24 @@
   "soleProp": "Empresario por cuenta propia",
   "twoFactorAlertTitle": "Active la autenticación de doble factor",
   "twoFactorAlertMessage": "Por seguridad es necesario que active la autenticación de doble factor para confirmar retiros en tu cuenta BELOBABA",
-  "btnActivateTwoFactorAuth" : "Activar doble factor"
+  "btnActivateTwoFactorAuth" : "Activar doble factor",
+  "SELF": "Soy yo",
+  "FRIEND": "Amigo",
+  "BUSINESS_PARTNER": "Socio comercial",
+  "CUSTOMER": "Cliente",
+  "EMPLOYEE": "Empleado",
+  "BRANCH_OFFICE": "Sucursal",
+  "SUBSIDIARY_COMPANY": "Empresa subsidiaria",
+  "HOLDING_COMPANY": "Empresa madre",
+  "SUPPLIER": "Proveedor",
+  "CREDITOR": "Acreedor",
+  "DEBTOR": "Deudor",
+  "FRANCHISEE": "Franquiciado",
+  "NOT_RELATED": "No relacionado",
+  "EX_SPOUSE": "Ex cónyuge",
+  "CHILDREN": "Hijos",
+  "PARENT": "Padre",
+  "SIBLING": "Hermano",
+  "RELATIVE": "Familiar",
+  "SPOUSE": "Cónyuge"
 }
