fix: se activo ach usa para los retiros

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -532,8 +532,9 @@
   "soleProp": "Sole proprietorship",
   "twoFactorAlertTitle": "Activate two-factor authentication",
   "twoFactorAlertMessage": "For security, you need to activate two-factor authentication to confirm withdrawals in your BELOBABA account.",
-  "btnActivateTwoFactorAuth" : "Activate two factor",
+  "btnActivateTwoFactorAuth": "Activate two factor",
   "relationToBeneficiary": "Relación con el beneficiario",
+  "selectNetworkType": "Select Network type",
   "SELF": "Self",
   "FRIEND": "Friend",
   "CUSTOMER": "Customer",
