--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -518,8 +518,9 @@
   "soleProp": "Empresario por cuenta propia",
   "twoFactorAlertTitle": "Active la autenticación de doble factor",
   "twoFactorAlertMessage": "Por seguridad es necesario que active la autenticación de doble factor para confirmar retiros en tu cuenta BELOBABA",
-  "btnActivateTwoFactorAuth" : "Activar doble factor",
+  "btnActivateTwoFactorAuth": "Activar doble factor",
   "relationToBeneficiary": "Relación con el beneficiario",
+  "selectNetworkType": "Selecciona la red",
   "SELF": "Soy yo",
   "FRIEND": "Amigo",
   "BUSINESS_PARTNER": "Socio comercial",
