fix: nuevos tipos de documentos y campos para onboarding

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -553,5 +553,46 @@
   "SIBLING": "Sibling",
   "RELATIVE": "Relative",
   "BUSINESS_PARTNER": "Business Partner",
-  "SPOUSE": "Spouse"
+  "SPOUSE": "Spouse",
+  "primaryBusiness": "What is the main activity of your business?",
+  "descriptionBusinessNature": "How do you describe the nature of your business?",
+  "software": "Software",
+  "atm": "ATM",
+  "broker": "Broker",
+  "charity": "Charity",
+  "commodities": "Commodities",
+  "defiExchange": "DeFi Exchange",
+  "governmentForeign": "Government Foreign",
+  "governmentUs": "Government US",
+  "hnwi": "HNWI",
+  "insurance": "Insurance",
+  "advisor": "Advisor",
+  "miner": "Miner",
+  "nft": "NFT",
+  "nonBankCustodian": "Non Bank Custodian",
+  "pension": "Pension",
+  "whv": "WHV",
+  "pooledInvestment": "Pooled Investment",
+  "propTrading": "Prop Trading",
+  "spv": "SPV",
+  "stateForeign": "State Foreign",
+  "stateUs": "State US",
+  "supranationalBody": "Supranational Body",
+  "paymentProcessor": "Payment Processor",
+  "tokenProject": "Token Project",
+  "trustPersonal": "Trust Personal",
+  "trustCorp": "Trust Corp",
+  "bankUs": "Bank US",
+  "bankForeign": "Bank Foreign",
+  "cryptoMsbUs": "Crypto MSB US",
+  "cryptoMsbForeign": "Crypto MSB Foreign",
+  "nonCryptoMsbUs": "Non Crypto MSB US",
+  "nonCryptoMsbForeign": "Non Crypto MSB Foreign",
+  "articleIncorporation": "Articles of Incorporation",
+  "beneficialOwnershipCertificate": "Beneficial Ownership Certificate",
+  "incomeDeclaration": "Income declaration",
+  "documentPayslip": "Payslip",
+  "documentBankStatement": "Bank statement",
+  "documentsRequired": "All documents are required",
+  "selfieWithDocument": "Selfie with document"
 }
