--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -539,5 +539,46 @@
   "PARENT": "Padre",
   "SIBLING": "Hermano",
   "RELATIVE": "Familiar",
-  "SPOUSE": "Cónyuge"
+  "SPOUSE": "Cónyuge",
+  "primaryBusiness": "¿Cual es la actividad principal de su negocio?",
+  "descriptionBusinessNature": "¿Como describe la naturaleza de su negocio?",
+  "software": "Software",
+  "atm": "Cajero automático (ATM)",
+  "broker": "Corredor (BROKER)",
+  "charity": "Caridad",
+  "commodities": "Materias primas",
+  "defiExchange": "Intercambio DeFi",
+  "governmentForeign": "Gobierno extranjero",
+  "governmentUs": "Gobierno de EE. UU.",
+  "hnwi": "HNWI",
+  "insurance": "Seguro",
+  "advisor": "Asesor",
+  "miner": "Minero",
+  "nft": "NFT",
+  "nonBankCustodian": "Custodio no bancario",
+  "pension": "Pensión",
+  "whv": "WHV",
+  "pooledInvestment": "Inversión agrupada",
+  "propTrading": "Trading Prop",
+  "spv": "SPV",
+  "stateForeign": "Estado extranjero",
+  "stateUs": "Estado de EE. UU.",
+  "supranationalBody": "Organismo supranacional",
+  "paymentProcessor": "Procesador de pagos",
+  "tokenProject": "Proyecto de token",
+  "trustPersonal": "Fideicomiso personal",
+  "trustCorp": "Fideicomiso corporativo",
+  "bankUs": "Banco de EE. UU.",
+  "bankForeign": "Banco extranjero",
+  "cryptoMsbUs": "Crypto MSB de EE. UU.",
+  "cryptoMsbForeign": "Crypto MSB extranjero",
+  "nonCryptoMsbUs": "No Crypto MS",
+  "nonCryptoMsbForeign": "No Crypto MSB extranjero",
+  "articleIncorporation": "Artículo de incorporación",
+  "beneficialOwnershipCertificate": "Certificado de propiedad beneficiaria",
+  "incomeDeclaration": "Declaracion de ingresos",
+  "documentPayslip": "Recibo de pago",
+  "documentBankStatement": "Estado de cuenta bancario",
+  "documentsRequired": "Todos los documentos son requeridos",
+  "selfieWithDocument": "Selfie con documento"
 }
