feat: icono y link del modulo de tarjeta, remote config para habilitar el modulo por usuario

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -518,7 +518,7 @@
   "soleProp": "Empresario por cuenta propia",
   "twoFactorAlertTitle": "Active la autenticación de doble factor",
   "twoFactorAlertMessage": "Por seguridad es necesario que active la autenticación de doble factor para confirmar retiros en tu cuenta BELOBABA",
-  "btnActivateTwoFactorAuth" : "Activar doble factor",
+  "btnActivateTwoFactorAuth": "Activar doble factor",
   "relationToBeneficiary": "Relación con el beneficiario",
   "SELF": "Soy yo",
   "FRIEND": "Amigo",
@@ -538,5 +538,6 @@
   "PARENT": "Padre",
   "SIBLING": "Hermano",
   "RELATIVE": "Familiar",
-  "SPOUSE": "Cónyuge"
+  "SPOUSE": "Cónyuge",
+  "cardNoba": "Tarjeta"
 }
