--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -532,7 +532,7 @@
   "soleProp": "Sole proprietorship",
   "twoFactorAlertTitle": "Activate two-factor authentication",
   "twoFactorAlertMessage": "For security, you need to activate two-factor authentication to confirm withdrawals in your BELOBABA account.",
-  "btnActivateTwoFactorAuth" : "Activate two factor",
+  "btnActivateTwoFactorAuth": "Activate two factor",
   "relationToBeneficiary": "Relación con el beneficiario",
   "SELF": "Self",
   "FRIEND": "Friend",
@@ -552,5 +552,6 @@
   "SIBLING": "Sibling",
   "RELATIVE": "Relative",
   "BUSINESS_PARTNER": "Business Partner",
-  "SPOUSE": "Spouse"
+  "SPOUSE": "Spouse",
+  "cardNoba": "Card"
 }
